src/objects/Property__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Property</relationshipLabel>
        <relationshipName>Property</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Active_Collateral__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active Collateral</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Application__c</fullName>
        <label>Application</label>
        <referenceTo>Application__c</referenceTo>
        <relationshipLabel>Property</relationshipLabel>
        <relationshipName>Property</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <label>City</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Collateral_Type__c</fullName>
        <label>Collateral Type</label>
        <picklist>
            <picklistValues>
                <fullName>Assignment of Land Sales Contract</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Assignment of Lease</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Boat Security Interest</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Business Assets</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CO-OP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Collateral Security Agreement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Custom</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Manufactured Home</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Manufactured Home to be Purchased</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Real Estate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Special Assessment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Structure and Improvements</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Vessel-Ship&apos;s Mortgage</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>County__c</fullName>
        <label>County</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Damaged_Property__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Damaged Property</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>External_ID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>18</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Is_Property_Damaged_As_Per_40_50_Rule__c</fullName>
        <label>Is Property Damaged As Per 40/50 Rule</label>
        <picklist>
            <picklistValues>
                <fullName>YES</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NO</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Is_Property_Eligible_for_Refinancing__c</fullName>
        <label>Is Property Eligible for Refinancing</label>
        <picklist>
            <picklistValues>
                <fullName>YES</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NO</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Other_Property__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Other Property</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Other_Real_Estate_Owned_Value__c</fullName>
        <label>Other Real Estate Owned Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Owned_By_Applicant__c</fullName>
        <label>Owned By Applicant</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Percent_Of_Damage_As_Per_Rule_Of_40__c</fullName>
        <label>Percent Of Damage As Per Rule Of 40%</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Percent_Of_Damage_As_Per_Rule_Of_50__c</fullName>
        <label>Percent Of Damage As Per Rule Of 50%</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Primary_Residence__c</fullName>
        <label>Primary Residence</label>
        <picklist>
            <picklistValues>
                <fullName>True</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>False</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Property_Address__c</fullName>
        <label>Property Address</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Property_Damaged_As_Per_Rule_Of_40__c</fullName>
        <label>Property Damaged As Per Rule Of 40%</label>
        <picklist>
            <picklistValues>
                <fullName>YES</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NO</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Property_Damaged_As_Per_Rule_Of_50__c</fullName>
        <label>Property Damaged As Per Rule Of 50%</label>
        <picklist>
            <picklistValues>
                <fullName>YES</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NO</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Property_Sub_Type__c</fullName>
        <label>Property Subtype</label>
        <picklist>
            <controllingField>Property_Type__c</controllingField>
            <picklistValues>
                <fullName>Residential</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Property_Type__c</fullName>
        <label>Property Type</label>
        <picklist>
            <picklistValues>
                <fullName>CO-OP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Single Family</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Boat (Not Registered with Coast Guard)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Condo/Townhouse</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Homeowners Association</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Manufactured Home (Land Leased) - Repair</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Manufactured Home (Land Leased) - Replaced</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Manufactured Home (Land Owned) - Repair</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Manufactured Home (Land Owned) - Replace</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Real Estate (Contract for Deed)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Real Estate (Leased Land)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Real Estate (Owned)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Renter</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Vessel (Registered with Coast Guard)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Vacant Land</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Boat (Registered with Coast Guard)</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Property_Use_Type__c</fullName>
        <label>Property Use Type</label>
        <picklist>
            <picklistValues>
                <fullName>HOME/OWNER</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Refinancing_Test_Result__c</fullName>
        <label>Refinancing Test Result</label>
        <picklist>
            <picklistValues>
                <fullName>PASS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FAIL</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <label>State</label>
        <picklist>
            <picklistValues>
                <fullName>AK</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AZ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GU</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ID</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>KS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>KY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ME</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MH</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MP</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Steve_FF_Receipts__c</fullName>
        <label>FF Receipts</label>
        <summarizedField>ReceiptDocument__c.Amount__c</summarizedField>
        <summaryFilterItems>
            <field>ReceiptDocument__c.Use_of_Proceeds__c</field>
            <operation>equals</operation>
            <value>Furniture &amp; Fixtures</value>
        </summaryFilterItems>
        <summaryForeignKey>ReceiptDocument__c.Property__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Steve_Inventory_Receipts__c</fullName>
        <label>Inventory Receipts</label>
        <summarizedField>ReceiptDocument__c.Amount__c</summarizedField>
        <summaryFilterItems>
            <field>ReceiptDocument__c.Use_of_Proceeds__c</field>
            <operation>equals</operation>
            <value>Inventory</value>
        </summaryFilterItems>
        <summaryForeignKey>ReceiptDocument__c.Property__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Steve_M_E_Receipts__c</fullName>
        <label>M/E Receipts</label>
        <summarizedField>ReceiptDocument__c.Amount__c</summarizedField>
        <summaryFilterItems>
            <field>ReceiptDocument__c.Use_of_Proceeds__c</field>
            <operation>equals</operation>
            <value>Machinery &amp; Equipment</value>
        </summaryFilterItems>
        <summaryForeignKey>ReceiptDocument__c.Property__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Steve_Mitigation_Receipts__c</fullName>
        <label>Mitigation Receipts</label>
        <summarizedField>ReceiptDocument__c.Amount__c</summarizedField>
        <summaryFilterItems>
            <field>ReceiptDocument__c.Use_of_Proceeds__c</field>
            <operation>equals</operation>
            <value>Mitigation</value>
        </summaryFilterItems>
        <summaryForeignKey>ReceiptDocument__c.Property__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Steve_Personal_Property_Receipts__c</fullName>
        <label>Personal Property Receipts</label>
        <summarizedField>ReceiptDocument__c.Amount__c</summarizedField>
        <summaryFilterItems>
            <field>ReceiptDocument__c.Use_of_Proceeds__c</field>
            <operation>equals</operation>
            <value>Personal Property</value>
        </summaryFilterItems>
        <summaryForeignKey>ReceiptDocument__c.Property__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Steve_Real_Estate_Receipts__c</fullName>
        <label>Real Estate Receipts</label>
        <summarizedField>ReceiptDocument__c.Amount__c</summarizedField>
        <summaryFilterItems>
            <field>ReceiptDocument__c.Use_of_Proceeds__c</field>
            <operation>equals</operation>
            <value>Real Estate</value>
        </summaryFilterItems>
        <summaryForeignKey>ReceiptDocument__c.Property__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Steve_Total_Receipts__c</fullName>
        <label>Total Receipts</label>
        <summarizedField>ReceiptDocument__c.Amount__c</summarizedField>
        <summaryForeignKey>ReceiptDocument__c.Property__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Zip_Code__c</fullName>
        <label>Zip Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <label>Property</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Application__c</columns>
        <columns>Property_Address__c</columns>
        <columns>Damaged_Property__c</columns>
        <columns>Active_Collateral__c</columns>
        <columns>Collateral_Type__c</columns>
        <columns>Other_Property__c</columns>
        <columns>Primary_Residence__c</columns>
        <columns>Property_Type__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Property Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Property</pluralLabel>
    <recordTypes>
        <fullName>Master_Property_Record_Type</fullName>
        <active>true</active>
        <label>Master Property Record Type</label>
    </recordTypes>
    <recordTypes>
        <fullName>Read_Only</fullName>
        <active>true</active>
        <label>Read Only</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>